feat: added post content sanitizer.
